--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
+<!DOCTYPE html>
+
 <html>
 <head>
+  <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
+  <title>Hello, World!</title>
 </head>
 <body>
-<h1>Hello, World!</h1>
-<p>HELLO AMIGOS</p>
+  <iframe src="https://scratch.mit.edu/projects/1040142264/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </body>
 </html>
