--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 
 <html>
 <head>
-  <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
-  <title>Hello, World!</title>
+ <meta http-equiv="refresh" content="1; https://scratch.mit.edu/projects/1040142264/" />
+  <title>Redirect</title>
 </head>
 <body>
-  <iframe src="https://scratch.mit.edu/projects/1040142264/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+  <h1>Wait a sec, redirecting...</h1>
+  <h3>use <a href="https://scratch.mit.edu/projects/1040142264/">this link</a> if its not working</h3>
 </body>
 </html>
