--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <h1>hi</h1>
 <p>hello this is a html test hehe :)</p>
-<img src="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/image%20(1).jpg" alt="480x360 image of me aghh">
+<img src="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/image%20(1).jpg" alt="480x360 image of me aghh" width="480" hight="360">
 
 </body>
 </html>
