--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 <p>hello this is a html test hehe :)</p>
 <img src="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/image%20(1).jpg" alt="480x360 image of me aghh" width="480" hight="360">
 
+<p>This is completly hosted on github so thanks github i guess :)</p>
+
 </body>
 </html>
