--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/styles.css">
+<!-- <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/styles.css"> -->
 <title>Heblo</title>
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/Snapchat-125500920.ico">
 </head>
 <body>
 
-<h1>hi</h1>
+<h1 style="text-align:center;">hi</h1>
 <p>hello this is a html test hehe :)</p>
 <img src="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/image%20(1).jpg" alt="480x360 image of me aghh" width="480" hight="360">
 <p style="color: blue;">This is completly hosted on github so thanks github i guess</p>
-<button onclick="buttonAlertBox()">Try it</button>
+<button onclick="buttonAlertBox()">Click me plez</button>
 <script>function buttonAlertBox() {alert("Hi hehe");}</script>
 
 </body>
