--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <!-- <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/styles.css"> -->
 <title>Heblo</title>
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/Snapchat-125500920.ico">
+<style>
+  body {
+    background-color: lightblue;
+  }
+</style>
 </head>
 <body>
 
