--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/Snapchat-125500920.ico">
 <style>
   body {
-    background-color: lightblue;
+    background-color: lightgray;
+  }
+  #grad {
+  background-image: linear-gradient(blue, green);
   }
 </style>
 </head>
