--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   background-image: linear-gradient(blue, green);
   }
 </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
 
