--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <title>Heblo</title>
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/Snapchat-125500920.ico">
 <style>
-  #grad {
-  background-image: linear-gradient(blue, green);
+  body {
+  background-color: lightblue);
   }
 </style>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -14,11 +14,11 @@
 <body>
 
 <h1 style="text-align:center;">hi</h1>
-<p>hello this is a html test hehe :)</p>
+<p>hello this is a html test :)</p>
 <img src="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/image%20(1).jpg" alt="480x360 image of me aghh" width="480" hight="360">
 <p style="color: blue;">This is completly hosted on github so thanks github i guess</p>
 <button onclick="buttonAlertBox()">Click me plez</button>
-<script>function buttonAlertBox() {alert("Hi hehe");}</script>
+<script>function buttonAlertBox() {alert("Hi egg");}</script>
 
 </body>
 </html>
