--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/Snapchat-125500920.ico">
 <style>
   body {
-  background-color: lightblue);
+  background-color: lightblue;
   }
 </style>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -14,7 +14,7 @@
 <body>
 
 <h1 style="text-align:center;">hi</h1>
-<p>hello this is a html test :)</p>
+<p font-size: 30px>hello this is a html test :)</p>
 <img src="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/image%20(1).jpg" alt="480x360 image of me aghh" width="480" hight="360">
 <p style="color: blue;">This is completly hosted on github so thanks github i guess</p>
 <button onclick="buttonAlertBox()">Click me plez</button>
