--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 <title>Heblo</title>
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/Snapchat-125500920.ico">
 <style>
-  body {
-  background-color: lightblue);
-  }
+  body {background-color: lightblue;}
+.important {color: red; font-size: 30px;}
 </style>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
