--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<h1 style=text-align: center; class=important>hi</h1>
+<h1 style="text-align: center"; class="important">hi</h1>
 <p>hello this is a html test :)</p>
 <img src="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/image%20(1).jpg" alt="480x360 image of me aghh" width="480" hight="360">
 <p style="color: blue;">This is completly hosted on github so thanks github i guess</p>
