--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   background-color: lightblue;
   }
   body {background-color: lightblue;}
-.important {color: red; font-size: 30px;}
+.important {color: red;}
 
 </style>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
 
-<h1 style="text-align:center;">hi</h1>
-<p font-size: 30px>hello this is a html test :)</p>
+<h1 style="text-align:center;" class="important">hi</h1>
+<p>hello this is a html test :)</p>
 <h1 style="text-align: center"; class="important">hi</h1>
 <p>hello this is a html test :)</p>
 <img src="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/image%20(1).jpg" alt="480x360 image of me aghh" width="480" hight="360">
