updated index.html please work
i hope it works i beg please ughh html is hard

--- a/index.html
+++ b/index.html
@@ -6,23 +6,24 @@
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/Snapchat-125500920.ico">
 <style>
 
-  body {
-  background-color: lightblue;
-  }
   body {background-color: lightblue;}
-.important {color: red;}
+.important {
+  color: red;
+  font-size: 150%;
+}
 
 </style>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
 
-<h1 style="text-align:center;" class="important">hi</h1>
+<h1 style="text-align:center;">hi</h1>
 <p>hello this is a html test :)</p>
 <img src="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/image%20(1).jpg" alt="480x360 image of me aghh" width="480" hight="360">
 <p style="color: darkblue;">This is completly hosted on github so thanks github i guess</p>
 <button onclick="buttonAlertBox()">Click me plez (its funny)</button>
 <script>function buttonAlertBox() {alert("Hi you look like an egg");}</script>
+<p class="important">I think this website looks sigma</p>
 
 </body>
 </html>
