--- a/index.html
+++ b/index.html
@@ -5,25 +5,20 @@
 <title>Heblo</title>
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/Snapchat-125500920.ico">
 <style>
-
   body {background-color: lightblue;}
 .important {
-  color: red;
+ color: red;
   font-size: 150%;
 }
-
 </style>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
-<body>
+<h1 style="text-align:center;">Welcome to my website!</h1>
+<p style="color:red; text-align:center;">this page currently empty but you can check out <a
+  href="https://coollondos.github.io/goofy-ahh/"this part></a> for a surprise!</p>
 
-<h1 style="text-align:center;">hi</h1>
-<p>hello this is a html test :)</p>
-<img src="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/image%20(1).jpg" alt="480x360 image of me aghh" width="480" hight="360">
-<p style="color: darkblue;">This is completly hosted on github so thanks github i guess</p>
-<button onclick="buttonAlertBox()">Click me plez (its funny)</button>
-<script>function buttonAlertBox() {alert("Hi you look like an egg");}</script>
-<p class="important">I think this website looks sigma</p>
 
 </body>
+
 </html>
+
