--- a/goofy-ahh/index.html
+++ b/goofy-ahh/index.html
@@ -18,8 +18,11 @@
 <p>hello this is a html test :)</p>
 <img src="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/image%20(1).jpg" alt="480x360 image of me aghh" width="480" hight="360">
 <p style="color: darkblue;">This is completly hosted on github so thanks github i guess</p>
-<button onclick="buttonAlertBox()">Click me plez (its funny)</button>
-<script>function buttonAlertBox() {alert("Hi you look like an egg");}</script>
+<button onclick="sigma()">Click me plez (its funny)</button>
+<script>
+function sigma() {
+alert("Hi you look like an egg"); }
+</script>
 <p class="important">I think this website looks sigma</p>
 </body>
 </html>
