--- a/goofy-ahh/index.html
+++ b/goofy-ahh/index.html
@@ -3,7 +3,7 @@
 <head>
 <!-- <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/styles.css"> -->
 <title>Heblo</title>
-<link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+<link rel="icon" type="image/x-icon" href="https://coollondos.github.io/assets/favicon.ico">
 <style>
   body {background-color: lightblue;}
 .important {
@@ -16,7 +16,7 @@
 <body>
 <h1 style="text-align:center;">hi</h1>
 <p>hello this is a html test :)</p>
-<img src="assets/me.jpg" alt="480x360 image of me aghh" width="480" hight="360">
+<img src="https://coollondos.github.io/assets/me.jpg" alt="480x360 image of me aghh" width="480" hight="360">
 <p style="color: darkblue;">This is completly hosted on github so thanks github i guess</p>
 <button onclick="sigma()">Click me plez (its funny)</button>
 <script>
