oh god please work

--- a/goofy-ahh/index.html
+++ b/goofy-ahh/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/styles.css"> -->
+<link rel="stylesheet" type="text/css" href="https://coollondos.github.io/assets/styles.css">
 <title>Heblo</title>
 <link rel="icon" type="image/x-icon" href="https://coollondos.github.io/assets/favicon.ico">
 <style>
-  body {background-color: lightblue;}
+ <!-- body {background-color: lightblue;}
 .important {
   color: red;
   font-size: 150%;
-}
+} -->
 </style>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
@@ -19,7 +19,7 @@
 <img src="https://coollondos.github.io/assets/me.jpg" alt="480x360 image of me aghh" width="480" hight="360">
 <p style="color: darkblue;">This is completly hosted on github so thanks github i guess</p>
 <button onclick="sigma()">Click me plez (its funny)</button>
-<script>
+<script type="text/javascript">
 function sigma() {
 alert("Hi you look like an egg"); }
 </script>
