--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/styles.css"> -->
+<link rel="stylesheet" type="text/css" href="https://coollondos.github.io/assets/styles.css">
 <title>Heblo</title>
-<link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/CoolLondos/CoolLondos.github.io/main/Snapchat-125500920.ico">
+<link rel="icon" type="image/x-icon" href="https://coollondos.github.io/assets/favicon.ico">
 <style>
-  body {background-color: lightblue;}
+ <!-- body {background-color: lightblue;}
 .important {
  color: red;
   font-size: 150%;
-}
+} -->
 </style>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
