--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 </style>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
+<body>
 <h1 style="text-align:center;">Welcome to my website!</h1>
-<p style="color:red; text-align:center;">this page currently empty but you can check out <a href="https://coollondos.github.io/goofy-ahh/">this part</a> for a surprise!</p>
-
+<p style="color:red; text-align:center;">this page currently empty<!-- but you can check out <a href="https://coollondos.github.io/goofy-ahh/">this part</a> for a surprise!--></p>
 
 </body>
-
 </html>
 
