Edited some files

--- a/goofy-ahh/index.html
+++ b/goofy-ahh/index.html
@@ -18,6 +18,6 @@
 function sigma() {
 alert("Hi you look like an egg"); }
 </script>
-<p class="important">I think this website looks sigma</p>
+<p style="color: red; font-size: 150%;">I think this website looks sigma</p>
 </body>
 </html>
