--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <link rel="stylesheet" type="text/css" href="https://coollondos.github.io/assets/styles.css">
 <title>Heblo</title>
@@ -10,7 +10,7 @@
 </head>
 <body>
 <h1 style="text-align:center;">Welcome to my website!</h1>
-<p style="color:red; text-align:center;">This page currently empty so idk<!-- but you can check out <a href="https://coollondos.github.io/goofy-ahh/">this part</a> for a surprise!- (actually no)-></p>
+<p style="color:red; text-align:center;">This page currently empty so idk<!-- but you can check out <a href="https://coollondos.github.io/goofy-ahh/">this part</a> for a surprise! (actually no)--></p>
 
 </body>
 </html>
