--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="icon" type="image/x-icon" href="https://coollondos.github.io/assets/favicon.ico">
 <style>
 </style>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <h1 style="text-align:center;">Welcome to my website!</h1>
