--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-<h1 style="text-align: center;">404</h1>
+<h1 style="text-align: center;"><i>404</i></h1>
 <h3 style="text-align: center;">The page you were looking for doesn't exist :(</h3>
 </body>
 </html>
