--- a/goofy-ahh/index.html
+++ b/goofy-ahh/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <link rel="stylesheet" type="text/css" href="https://coollondos.github.io/assets/styles.css">
 <title>Heblo</title>
 <link rel="icon" type="image/x-icon" href="https://coollondos.github.io/assets/favicon.ico">
 <style>
 </style>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <h1 style="text-align:center;">hi</h1>
 <p>hello this is a html test :)</p>
-<img src="https://coollondos.github.io/assets/me.jpg" alt="480x360 image of me aghh" width="480" hight="360">
+<img src="https://coollondos.github.io/assets/me.jpg" alt="480x360 image of me aghh" width="480" height="360">
 <p style="color: darkblue;">This is completly hosted on github so thanks github i guess</p>
 <button onclick="sigma()">Click me plez (its funny)</button>
-<script type="text/javascript">
+<script>
 function sigma() {
 alert("Hi you look like an egg"); }
 </script>
