this better fix it

--- a/JS-Playground/index.html
+++ b/JS-Playground/index.html
@@ -10,5 +10,19 @@
 </head>
 <body>
 <button onclick="rizz()">Click me!</button>
-<script src="main.js"></script>
+<script>
+var count = 0;
+function rizz() {
+count++;
+  if (count == 1) {
+  alert("Click me again!");
+} elseif (count == 2) {
+  alert("Yippee");
+} else {
+  alert("e");
+}
+
+}
+</script>
 </body>
+</html>
