its else if not elseif i want to break freeeee

--- a/JS-Playground/index.html
+++ b/JS-Playground/index.html
@@ -10,19 +10,6 @@
 </head>
 <body>
 <button onclick="rizz()">Click me!</button>
-<script>
-var count = 0;
-function rizz() {
-count++;
-  if (count == 1) {
-  alert("Click me again!");
-} elseif (count == 2) {
-  alert("Yippee");
-} else {
-  alert("e");
-}
-
-}
-</script>
+<script src="main.js"></script>
 </body>
 </html>
