--- a/JS-Playground/index.html
+++ b/JS-Playground/index.html
@@ -11,5 +11,6 @@
 <body>
 <button onclick="rizz()">Click me!</button>
 <script src="main.js"></script>
+<h1 id="test">Click the button above!</h1>
 </body>
 </html>
