--- a/404.html
+++ b/404.html
@@ -10,6 +10,6 @@
 </head>
 <body>
 <h1 style="text-align: center;"><i>404</i></h1>
-<h3 style="text-align: center;">The page you were looking for doesn't exist :(</h3>
+<h3 style="text-align: center;">The page you were <a href="assets/Pluh.jpg" target="_blank" style="text-decoration: none; color: black;">look</a>ing for doesn't exist :(</h3>
 </body>
 </html>
