updated A LOT of the website :)

--- a/JS-Playground/index.html
+++ b/JS-Playground/index.html
@@ -9,8 +9,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<button onclick="rizz()">Click me!</button>
+<button onclick="rizzup()">Click me for plus 1!</button>
 <script src="main.js"></script>
-<p id="test">Click the button above!</p>
+<p id="test">Number: 0</p>
+<button onclick="rizzdown()">Click me for minus 1!</button>
 </body>
 </html>
