--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="stylesheet" type="text/css" href="https://coollondos.github.io/assets/styles.css">
+<link rel="stylesheet" type="text/css" href="styles.css">
 <title>Heblo</title>
-<link rel="icon" type="image/x-icon" href="https://coollondos.github.io/assets/favicon.ico">
-<style>
-</style>
+<link rel="icon" type="image/x-icon" href="assets/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
-<h1 style="text-align:center;">Welcome to my website!</h1>
-<p style="color:red; text-align:center;">This page currently empty so idk<!-- but you can check out <a href="https://coollondos.github.io/goofy-ahh/">this part</a> for a surprise! (actually no)--></p>
-
+<body style="text-align: center; margin: 0;">
+<h1>Welcome to my website!</h1>
+<p style="color:red;">This page currently empty so idk<!-- but you can check out <a href="https://coollondos.github.io/goofy-ahh/">this part</a> for a surprise! (actually no)--></p>
+<br />
+<!-- yay i used div for the first time! :) -->
+<div style="background-color: rgb(255, 210, 50);">
+<h1 style="color: red; display: inline;">!</h1>
+<p style="display: inline;">New addition</p>
+<h1 style="color: red; display: inline;">!</h1>
+<a style="display: block;" href="coollondos.github.io/JS-Playground">JS-Playground</a>
+<p>Gets updated pretty frequently so check often!</p>
+</div>
 </body>
 </html>
-
