--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h1 style="color: red; display: inline;">!</h1>
 <p style="display: inline;">New addition</p>
 <h1 style="color: red; display: inline;">!</h1>
-<a style="display: block;" href="coollondos.github.io/JS-Playground">JS-Playground</a>
+<a style="display: block;" href="https://coollondos.github.io/JS-Playground">JS-Playground</a>
 <p>Gets updated pretty frequently so check often!</p>
 </div>
 </body>
