--- a/404.html
+++ b/404.html
@@ -2,18 +2,14 @@
 <html lang="en">
 <head>
 <link rel="stylesheet" type="text/css" href="https://coollondos.github.io/assets/styles.css">
-<title>Heblo</title>
+<title>404 Not found</title>
 <link rel="icon" type="image/x-icon" href="https://coollondos.github.io/assets/favicon.ico">
 <style>
 </style>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<script src="main.js"></script>
-<button onclick="rizzup()">Click me for plus 1!</button>
-<button onclick="rizzx2()">Click me for times 2!</button>
-<p id="test">Number: 0</p>
-<button onclick="rizzdown()">Click me for minus 1!</button>
-<button onclick="rizzhalf2()">Click me for half!</button>
+<h1 style="text-align: center;"><i>404</i></h1>
+<h3 style="text-align: center;">The page you were <a href="assets/Pluh.jpg" target="_blank" style="text-decoration: none; color: black;">look</a>ing for doesn't exist :(</h3>
 </body>
 </html>
