--- a/JS-Playground/index.html
+++ b/JS-Playground/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="stylesheet" type="text/css" href="https://coollondos.github.io/assets/styles.css">
+<link rel="stylesheet" type="text/css" href="https://coollondos.github.io/styles.css">
 <title>Heblo</title>
 <link rel="icon" type="image/x-icon" href="https://coollondos.github.io/assets/favicon.ico">
 <style>
