relocated website pages and added navbar! :) im proud of myself

--- a/404.html
+++ b/404.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="stylesheet" type="text/css" href="styles.css">
+<link rel="stylesheet" type="text/css" href="https://coollondos.github.io/styles.css">
 <title>404 Not found</title>
-<link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+<link rel="icon" type="image/x-icon" href="https://coollondos.github.io/assets/favicon.ico">
 <style>
 </style>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body style="text-align: center;">
 <h1><i>404</i></h1>
-<h3>The page you were <a href="assets/Pluh.jpg" target="_blank" style="text-decoration: none; color: black;">look</a>ing for doesn't exist :(</h3>
-<img src="assets/sad.jpg" alt="sad face but you cant see it haha"/>
+<h3>The page you were <a href="https://coollondos.github.io/assets/Pluh.jpg" target="_blank" style="text-decoration: none; color: black;">look</a>ing for doesn't exist :(</h3>
+<img src="https://coollondos.github.io/assets/sad.jpg" alt="sad face but you cant see it haha"/>
 </body>
 </html>
