--- a/index.html
+++ b/index.html
@@ -3,20 +3,25 @@
 <head>
 <link rel="stylesheet" type="text/css" href="styles.css">
 <title>Heblo</title>
-<link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+<link rel="icon" type="image/x-icon" href="https://coollondos.github.io/assets/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body style="text-align: center; margin: 0;">
+<div class="navbar">
+<a class="active" href="https://coollondos.github.io">Home</a>
+<a href="https://coollondos.github.io/other/JS-Playground">JS-Playground</a>
+<a href="https://coollondos.github.io/other/goofy-ahh">goofy-ahh</a>
+</div>
 <h1>Welcome to my website!</h1>
-<p style="color:red;">This page currently empty so idk<!-- but you can check out <a href="https://coollondos.github.io/goofy-ahh/">this part</a> for a surprise! (actually no)--></p>
+<p style="color:red;">This page currently empty so idk</p>
 <br />
 <!-- yay i used div for the first time! :) -->
 <div style="background-color: rgb(255, 210, 50);">
 <h1 style="color: red; display: inline;">!</h1>
 <p style="display: inline;">New addition</p>
 <h1 style="color: red; display: inline;">!</h1>
-<a style="display: block;" href="https://coollondos.github.io/JS-Playground">JS-Playground</a>
-<p>Gets updated pretty frequently so check often!</p>
+<a style="display: block;" href="https://coollondos.github.io/other/JS-Playground">JS-Playground</a>
+<p>Gets updated sometimes so check sometimes</p>
 </div>
 </body>
 </html>
