--- a/other/JS-Playground/index.html
+++ b/other/JS-Playground/index.html
@@ -9,6 +9,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+<div class="navbar">
+<a href="https://coollondos.github.io">Home</a>
+<a class="active" href="https://coollondos.github.io/other/JS-Playground">JS-Playground</a>
+<a href="https://coollondos.github.io/other/goofy-ahh">goofy-ahh</a>
+</div>
 <script src="main.js"></script>
 <button onclick="rizzup()">Click me for plus 1!</button>
 <button onclick="rizzx2()">Click me for times 2!</button>
