--- a/other/goofy-ahh/index.html
+++ b/other/goofy-ahh/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="stylesheet" type="text/css" href="https://coollondos.github.io/assets/styles.css">
+<link rel="stylesheet" type="text/css" href="https://coollondos.github.io/styles.css">
 <title>Heblo</title>
 <link rel="icon" type="image/x-icon" href="https://coollondos.github.io/assets/favicon.ico">
 <style>
@@ -9,9 +9,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+<div class="navbar">
+<a href="https://coollondos.github.io">Home</a>
+<a href="https://coollondos.github.io/other/JS-Playground">JS-Playground</a>
+<a class="active" href="https://coollondos.github.io/other/goofy-ahh">goofy-ahh</a>
+</div>
 <h1 style="text-align:center;">hi</h1>
 <p>hello this is a html test :)</p>
-<img src="https://coollondos.github.io/assets/me.jpg" alt="480x360 image of me aghh" width="480" height="360">
+<!-- <img src="https://coollondos.github.io/assets/me.jpg" alt="480x360 image of me aghh" width="480" height="360"> -->
 <p style="color: darkblue;">This is completly hosted on github so thanks github i guess</p>
 <button onclick="sigma()">Click me plez (its funny)</button>
 <script>
