how have i managed to forget this :( i cant

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body style="text-align: center; margin: 0;">
-<div class="navbar">
+<div class="navbar" style="text-align: center;">
 <a class="active" href="https://coollondos.github.io">Home</a>
 <a href="https://coollondos.github.io/other/JS-Playground">JS-Playground</a>
 <a href="https://coollondos.github.io/other/goofy-ahh">goofy-ahh</a>
