--- a/other/html-early-test/index.html
+++ b/other/html-early-test/index.html
@@ -8,7 +8,7 @@
 </head>
 <body style="text-align: center; margin: 0;">
 <h3 style="display: inline; color: red;">TEST PAGE </h3><p style="display: inline; color: red;">not final!</p>
-<div class="navbar">
+<div class="navbar" style="text-align: center;">
 <a href="https://coollondos.github.io">Home</a>
 <a href="https://coollondos.github.io/other/JS-Playground">JS-Playground</a>
 <a href="https://coollondos.github.io/other/goofy-ahh">goofy-ahh</a>
