--- a/other/JS-Playground/index.html
+++ b/other/JS-Playground/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<div class="navbar">
+<div class="navbar" style="text-align: center;">
 <a href="https://coollondos.github.io">Home</a>
 <a class="active" href="https://coollondos.github.io/other/JS-Playground">JS-Playground</a>
 <a href="https://coollondos.github.io/other/goofy-ahh">goofy-ahh</a>
