--- a/other/nfc-funny/index.html
+++ b/other/nfc-funny/index.html
@@ -5,8 +5,9 @@
     <title>haha pranked idiot</title>
   </head>
   <body>
-    <video controls autoplay name="media" loop id="5sec" style="display: none;">
-      <source src="https://www.myinstants.com/media/sounds/funny-nfc-tag.mp3" type="audio/mpeg">
-    </video>
+    <audio id="sound1" src="https://myinstants.com/media/sounds/funny-nfc-tag.mp3" preload="auto"></audio>
+  <button onclick="ble" id="hideme" style="width: 100%; height: auto;">CLICK ME NOW</button>
+  <p id="text" style="width: 100%; height: auto; display: none;">haha pranked idiot<p>
+  <script src="main.js"></script>
   </body>
 </html>
