--- a/other/nfc-funny/index.html
+++ b/other/nfc-funny/index.html
@@ -7,7 +7,7 @@
   <body>
     <audio id="sound1" src="https://myinstants.com/media/sounds/funny-nfc-tag.mp3" preload="auto"></audio>
   <button onclick="ble" id="hideme" style="width: 100%; height: auto;">CLICK ME NOW</button>
-  <p id="text" style="width: 100%; height: auto; display: none;">haha pranked idiot<p>
+  <p id="text" style="width: 100%; height: auto; display: none;">haha pranked idiot</p>
   <script src="main.js"></script>
   </body>
 </html>
