--- a/other/nfc-funny/index.html
+++ b/other/nfc-funny/index.html
@@ -5,7 +5,7 @@
     <title>haha pranked idiot</title>
   </head>
   <body>
-    <audio id="sound1" src="https://myinstants.com/media/sounds/funny-nfc-tag.mp3" preload="auto"></audio>
+    <audio id="sound1" src="https://myinstants.com/media/sounds/funny-nfc-tag.mp3" preload="auto" loop></audio>
   <button onclick="ble()" id="hideme" style="width: 100%; height: auto;">CLICK ME NOW</button>
   <p id="text" style="width: 100%; height: auto; display: none;">haha pranked idiot</p>
   <script src="main.js"></script>
